--- a/styles/style.css
+++ b/styles/style.css
@@ -145,3 +145,40 @@ header{
     color: #252432;
     opacity: 50%;
 }
+
+.form-container {
+  width: 100%;
+  max-width: 500px;
+  background: #f6f9ff;
+  padding: 20px;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.contact-form label {
+  font-weight: 600;
+  margin-bottom: 4px;
+  color: #222;
+  font-family: "Inter";
+}
+
+.contact-form input,
+.contact-form textarea {
+  padding: 12px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  font-family: "Inter";
+  font-size: 16px;
+  background-color: #fff;
+  transition: border-color 0.3s;
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+  border-color: #5f6df8;
+  outline: none;
+}
